--- a/survey.html
+++ b/survey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BER Passenger Survey</title>
+    <title>BRU - Passenger Profiler Survey</title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link
@@ -26,56 +26,92 @@
       rel="stylesheet"
       type="text/css"
     />
-
-    <link href="css/map-search-box.css" rel ="stylesheet" type="text/css" />
     <link href="css/postal-code-search-box.css" rel ="stylesheet" type="text/css" />
+    <link href="css/map-search-box.css" rel ="stylesheet" type="text/css" />
   </head>
 
   <body>
     <survalyzer-survey
-      surveyhash="jrirbfeuyo"
+      surveyhash="jsbrwjvwou"
       tenant="silverlining"
     ></survalyzer-survey>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://survalyzer.survalyzer.eu/assets/survalyzer-survey.js"></script>
 
-    <script src="search_list/postal_code_Czech.js"></script>
-    <script src="search_list/postal_Code_Germany.js"></script>
-    <script src="search_list/postal_code_Poland.js"></script>
-    <script src="search_list/postal_code_None.js"></script>
-
+    <script src="search_list/BRU_flight_list.js"></script>
+    <script src="search_list/airports.js"></script>
+    <script src="search_list/postal_code_Belgium.js"></script>
+    <script src="search_list/postal_code_France.js"></script>
+    <script src="search_list/postal_code_Germany.js"></script>
+    <script src="search_list/postal_code_Luxembourg.js"></script>
+    <script src="search_list/postal_code_Netherlands.js"></script>
+    <script src="search_list/postal_code_All.js"></script>
+    
+    <script src="scripts/flight_search.js"></script>
+    <script src="scripts/airport_search.js"></script>
+    <script src="scripts/maps_search.js"></script>
     <script src="scripts/postal_code_search.js"></script>
+    <script src="scripts/calculate_airport_distance.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+    <div id="selectedAddress"></div>
+    <input
+      id="pac-input"
+      class="controls"
+      type="text"
+      placeholder="Search Box"
+    />
+
+    <div id="map">
+      <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyvj3Xxekjs1ZGpv5mtwkblHhmjdPd2SA&callback=initAutocomplete&libraries=places&v=weekly"
+        defer> 
+      </script>
+    </div> 
 
     <script>
         window.addEventListener('load', function () {
         setTimeout(() => {
-          const googleMapsHandler = () => {
+          const listSearchHandler = () => {
             console.log("Current Page Index: ", api.fn.getCurrentPageIndex() );
-            var foundin = $( "section:contains('#PostcalCodeQuestionGermany')" )
-            console.log(foundin);
-            // check found in exist via foundin.length  with > 1 is OK. 0 means not found the text.
-            // make sure check the answer value (hide / show) because we can click Back and Next.
-            //if ((foundin.length === 1 && api.fn.answers().answer != 'show')) { //postal code
-	          if ((foundin.length === 1)) { //postal code
-              showPostalCodeSection_q6();
-            } else {
-              hidePostalCodeSection_q6();
+            
+            var airport_Tag = $("section:contains('final_destination_airport_tag')")
+            console.log(airport_Tag);
+            if ((airport_Tag.length === 1)) {
+              show_airport_search_box();
+            }
+            else{
+              hide_airport_search_box();
             }
 
-          };
+            if (api.fn.getCurrentPageIndex() ===2) { 
+              show_flight_search_box();
+            } else {
+              hide_flight_search_box();
+            }
 
-          api.events.subscribe('next', googleMapsHandler);
-          api.events.subscribe('back', googleMapsHandler);
-          api.events.subscribe('startedOrContinued', googleMapsHandler);
+            if (api.fn.getCurrentPageIndex() ===7) {
+              //api.fn.answers({Q11_calculating_distance_required: 1});                 
+            } else {
+              api.fn.answers({Q11_calculating_distance_required: 0});                 
+            }
+
+            if (api.fn.getCurrentPageIndex() ===62) { //2023.04.26: 59
+              show_postal_code_search_box();
+            } else {
+              hide_postal_code_search_box();
+            }
+          }
+
+          api.events.subscribe('next', listSearchHandler);
+          api.events.subscribe('back', listSearchHandler);
+          api.events.subscribe('startedOrContinued', listSearchHandler);
+          //api.events.subscribe('next', distanceValidationHandler);
         });
       });
     </script>
-
-<!--     <input list="postalCodeList" style="display: none" onchange="select_postal_code()"  onkeyup="search_postal_code()" name="inputPostalCodeID" id="inputPostalCodeID" >
-    <datalist id="postalCodeList"> </datalist>  -->
-  
 </body>
 </html>
