--- a/survey.html
+++ b/survey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BRU - Passenger Profiler Survey</title>
+    <title>Test search-engine</title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link
@@ -32,32 +32,22 @@
 
   <body>
     <survalyzer-survey
-      surveyhash="jsbrwjvwou"
+      surveyhash="jrirbfeuyo"
       tenant="silverlining"
     ></survalyzer-survey>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://survalyzer.survalyzer.eu/assets/survalyzer-survey.js"></script>
 
-    <script src="search_list/BRU_flight_list.js"></script>
+
     <script src="search_list/airports.js"></script>
-    <script src="search_list/postal_code_Belgium.js"></script>
-    <script src="search_list/postal_code_France.js"></script>
-    <script src="search_list/postal_code_Germany.js"></script>
-    <script src="search_list/postal_code_Luxembourg.js"></script>
-    <script src="search_list/postal_code_Netherlands.js"></script>
-    <script src="search_list/postal_code_All.js"></script>
-    
-    <script src="scripts/flight_search.js"></script>
     <script src="scripts/airport_search.js"></script>
-    <script src="scripts/maps_search.js"></script>
-    <script src="scripts/postal_code_search.js"></script>
-    <script src="scripts/calculate_airport_distance.js"></script>
+
 
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-    <script>
+     <script>
         window.addEventListener('load', function () {
         setTimeout(() => {
           const listSearchHandler = () => {
@@ -71,30 +61,12 @@
             else{
               hide_airport_search_box();
             }
-
-            if (api.fn.getCurrentPageIndex() ===2) { 
-              show_flight_search_box();
-            } else {
-              hide_flight_search_box();
-            }
-
-            if (api.fn.getCurrentPageIndex() ===7) {
-              //api.fn.answers({Q11_calculating_distance_required: 1});                 
-            } else {
-              api.fn.answers({Q11_calculating_distance_required: 0});                 
-            }
-
-            if (api.fn.getCurrentPageIndex() ===62) { //2023.04.26: 59
-              show_postal_code_search_box();
-            } else {
-              hide_postal_code_search_box();
-            }
           }
 
           api.events.subscribe('next', listSearchHandler);
           api.events.subscribe('back', listSearchHandler);
           api.events.subscribe('startedOrContinued', listSearchHandler);
-          //api.events.subscribe('next', distanceValidationHandler);
+
         });
       });
     </script>
