--- a/survey.html
+++ b/survey.html
@@ -26,8 +26,8 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="css/postal-code-search-box.css" rel ="stylesheet" type="text/css" />
-    <link href="css/map-search-box.css" rel ="stylesheet" type="text/css" />
+    <link href="css/external-search-box.css" rel ="stylesheet" type="text/css" />
+
   </head>
 
   <body>
@@ -36,16 +36,22 @@
       tenant="silverlining"
     ></survalyzer-survey>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
     <script src="https://survalyzer.survalyzer.eu/assets/survalyzer-survey.js"></script>
 
 
     <script src="search_list/airports.js"></script>
     <script src="scripts/airport_search.js"></script>
+    <script src="scripts/external_search.js"></script>
 
+    <!-- <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" /> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> -->
 
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"> -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/smoothness/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 
      <script>
         window.addEventListener('load', function () {
@@ -55,11 +61,12 @@
             
             var airport_Tag = $("section:contains('final_destination_airport_tag')")
             console.log(airport_Tag);
-            if ((airport_Tag.length === 1)) {
-              show_airport_search_box();
+            if (api.fn.getCurrentPageIndex() === 0) {
+              load_airports_list();
+              show_external_search_box("Core_Q11");
             }
             else{
-              hide_airport_search_box();
+              hide_external_search_box();
             }
           }
 
